grammar.js
        nu_script: $ => seq(
            optional($.shebang),
            repeat(choice(
                $._declaration,
                // NOTE:
                // in a script, this is not a legal top level item, this is
                // only here to cover `config.nu` and `env.nu` which are what
                // this parser will mostly be used for i think
                prec(-1, $._statement),
            ))
        ),

        cmd_identifier: $ => token(/[_\p{XID_Start}][_\-\p{XID_Continue}]*/),

        identifier: $ => token(/[_\p{XID_Start}][_\p{XID_Continue}]*/),

        _command_name: $ => choice(
            field("unquoted_name", $.cmd_identifier),
            field("quoted_name", $.val_string),
        ),

        _var_name: $ => token(seq(
            noneOf(...NON_IDENT_CHARS(), '#'),
            repeat(noneOf(...NON_IDENT_CHARS()))
        )),

        /// Top Level Items

        _declaration: $ => choice(
            $.decl_alias,
            $.decl_def,
            $.decl_export,
            $.decl_extern,
            $.decl_use,
        ),

        decl_def: $ => seq(
            optional(MODIFIER().visibility),
            choice(KEYWORD().def, KEYWORD().def_env),
            field("name", $._command_name),
            field("parameters", choice($.parameter_parens, $.parameter_bracks)),
            field("body", $.block),
        ),

        decl_use: $ => prec.left(1, seq(
            optional(MODIFIER().visibility),
            KEYWORD().use,
            field("module", choice(
                $.val_string,
                $.unquoted,
            )),
            optional($._scope_pattern),
        )),

        /// Parameters

        parameter_parens: $ => seq(
            DELIM().open_paren,
            repeat($.parameter),
            DELIM().close_paren,
        ),

        parameter_bracks: $ => seq(
            DELIM().open_brack,
            repeat($.parameter),
            DELIM().close_brack,
        ),

        parameter: $ => seq(
            $._param_name,
            optional(choice(
                $.param_type,
                $.param_value,
                seq($.param_value, $.param_type),
                seq($.param_type, $.param_value),
            )),
            optional(PUNC().comma),
        ),

        _param_name: $ => choice(
            field("param_rest", $.param_rest),
            field("param_optional", $.param_opt),
            field("param_name", $.identifier),
            field("param_short_flag", $.param_short_flag),
            $._param_long_flag,
        ),

        param_type: $ => seq(
            PUNC().colon,
            field("param_type", choice(
                $.list_type,
                FLAT_TYPES(),
            )),
            field("completion", optional($.param_cmd)),
        ),

        param_value: $ => seq(
            PUNC().eq,
            field("param_value", $._expression),
        ),

        list_type: $ => prec(1, seq(
            "list",
            optional(seq(
                token.immediate(DELIM().open_angle),
                field("inner", token(FLAT_TYPES())),
                DELIM().close_angle
            )),
        )),

        param_cmd: $ => seq(
            PUNC().at,
            $._command_name,
        ),

        param_rest: $ => seq(
            PUNC().rest,
            $._var_name,
        ),

        param_opt: $ => seq(
            $.identifier,
            token.immediate(PUNC().question),
        ),

        flag_capsule: $ => seq(
            DELIM().open_paren,
            $.param_short_flag,
            DELIM().close_paren,
        ),

        param_short_flag: $ => seq(
            "-",
            token.immediate(/[a-zA-Z0-9]/),
        ),

        /// Statements

        _statement: $ => seq(
            choice(
                $._control,
                $._stmt_hide,
                $._stmt_overlay,
                $.stmt_let,
                $.stmt_mut,
                $.stmt_const,
                $.stmt_register,
                $.stmt_source,
                $.assignment,
                $.pipeline
            ),
            optional(PUNC().semicolon),
        ),

        /// Controls

        _ctrl_expression: $ => choice(
            field("ctrl_break", KEYWORD().break),
            field("ctrl_continue", KEYWORD().continue),
            $.ctrl_do,
            $.ctrl_if,
            $.ctrl_try,
            $.ctrl_match,
            $.ctrl_return,
        ),

        // Standalone Controls

        _scope_pattern: $ => choice(
            field("wildcard", $.wild_card),
            field("command", $._command_name),
            field("command_list", $.command_list),
        ),

        wild_card: $ => token("*"),

        command_list: $ => seq(
            DELIM().open_brack,
            repeat(field("command", $._command_name)),
            DELIM().close_brack,
        ),

        /// Assignment Statement

        block: $ => seq(
            DELIM().open_brace,
            repeat(choice(
                $._declaration,
                $._statement,
            )),
            DELIM().close_brace,
        ),

        /// Pipeline

        pipeline: $ => prec(-69, seq(
            $.pipe_element,
            repeat(seq(
                PUNC().pipe,
                $.pipe_element
            )),
        )),

        pipe_element: $ => prec(-1, choice(
            $._expression,
            $._ctrl_expression,
            $.where_command,
            $.command,
        )),

        // the where command has a unique argument pattern that breaks the
        // general command parsing, so we handle it separately
        _expression: $ => choice(
            $._value,
            $.expr_binary,
            $.expr_unary,
            $.val_range,
            $.expr_parenthesized,
        ),

        /// Composite Expressions

        expr_parenthesized: $ => seq(
            DELIM().open_paren,
            optional($.pipeline),
            DELIM().close_paren,
        ),

        val_bool: $ => token(choice(SPECIAL().true, SPECIAL().false)),

        // separating floats from integers does not end well
        // especially when it comes to incorporation with ranges.
        val_binary: $ => seq(
            choice("0b[", "0o[", "0x["),
            repeat(seq($.hex_digit, optional(PUNC().comma))),
            DELIM().close_brack,
        ),

        hex_digit: $ => token(/[0-9a-fA-F]+/),

        val_string: $ => choice(
            $._str_double_quotes,
            $._str_single_quotes,
            $._str_back_ticks,
        ),

        _str_double_quotes: $ => seq(
            '"',
            repeat(choice(
                $._escaped_str_content,
                // double quoted strings accept escapes
                $.escape_sequence,
            )),
            '"',
        ),

        _str_single_quotes: $ => /'[^']*'/,

        _str_back_ticks: $ => /`[^`]*`/,

        val_list: $ => seq(
            DELIM().open_brack,
            repeat(field(
                "item",
                seq(
                    choice($._expression, alias($.identifier, $.val_string)),
                    optional(PUNC().comma)
                ),
            )),
            DELIM().close_brack,
            optional($.cell_path),
        ),

        val_table: $ => seq(
            DELIM().open_brack,
            field("head", seq($.val_list, PUNC().semicolon)),
            repeat(field("row", $.val_list)),
            DELIM().close_brack,
            optional($.cell_path),
        ),

        // parsing of blocks and closures is combined here
        // because otherwise this would conflict with records
        command: $ => prec.left(10, choice(
            $.cmd_head,
            $.cmd_head_sub,
            $.cmd_prefix_head_sub,
        )),

        cmd_head_sub: $ => prec.right(3, seq(
            field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
            field("sub", $.cmd_identifier),
            prec.right(10, repeat($._cmd_arg)),
        )),

        _cmd_arg: $ => choice(
            field("arg", prec.right(10, $._value)),
            // lowest precedence to make it a last resort
            field("arg_str", alias($.unquoted, $.val_string)),
            field("arg", $.expr_parenthesized),
            field("flag", $._flag),
            field("redir", $.redirection),
        ),

        unquoted: $ => prec.left(-69, token(/[^\s\n\t\r{}()\[\]"`']+/)),

        /// Comments

        comment: $ => seq(
            PUNC().hash,
            /.*/,
        )
    },
});

/// nushell keywords
function KEYWORD() {
    return {
        def: "def",
        def_env: "def-env",
        alias: "alias",
        use: "use",
        export_env: "export-env",
        extern: "extern",

        let: "let",
        let_env: "let-env",
        mut: "mut",
        const: "const",

        hide: "hide",
        hide_env: "hide-env",

        source: "source",
        source_env: "source-env",

        overlay: "overlay",
        register: "register",

        for: "for",
        loop: "loop",
        while: "while",
        error: "error",

        do: "do",
        if: "if",
        else: "else",
        try: "try",
        catch: "catch",
        match: "match",

        break: "break",
        continue: "continue",
        return: "return",

        as: "as",
        in: "in",
    }
}

// modifier keywords
function MODIFIER() {
    return {
        overlay_hide: "hide",
        overlay_list: "list",
        overlay_new: "new",
        overlay_use: "use",

        error_make: "make",

        visibility: "export",
    }
}

// redirection
function REDIR() {
    return [
        "err>", "out>",
        "e>", "o>",
        "err+out>", "out+err>",
        "o+e>", "e+o>"
    ]
}

// punctuation
function PUNC() {
    return {
        at: "@",
        dot: ".",
        hash: "#",
        pipe: "|",
        rest: "...",
        eq: "=",
        colon: ":",
        comma: ",",
        caret: "^",
        dollar: "$",
        fat_arrow: "=>",
        question: "?",
        underscore: "_",

        semicolon: ";",
    }
}

// delimiters
function DELIM() {
    return {
        open_angle: "<",
        close_angle: ">",

        open_brack: "[",
        close_brack: "]",

        open_brace: "{",
        close_brace: "}",

        open_paren: "(",
        close_paren: ")",
    }
}

// operators
function OPR() {
    return {
        // arithmetic
        plus: "+",
        minus: "-",
        times: "*",
        divide: "/",
        modulo: "mod",
        floor: "//",
        power: "**",
        append: "++",

        // comparison
        equal: "==",
        not_equal: "!=",
        less_than: "<",
        less_than_equal: "<=",
        greater_than: ">",
        greater_than_equal: ">=",

        // regex matching
        regex_match: "=~",
        regex_not_match: "!~",

        // logical
        not: "not",
        and: "and",
        or: "or",
        xor: "xor",

        // bitwise
        bit_or: "bit-or",
        bit_xor: "bit-xor",
        bit_and: "bit-and",
        bit_shl: "bit-shl",
        bit_shr: "bit-shr",

        // membership tests
        in: "in",
        not_in: "not-in",
        starts_with: "starts-with",
        ends_with: "ends-with",

        // assignment
        assign_add: "+=",
        assign_sub: "-=",
        assign_mul: "*=",
        assign_div: "/=",
        assign_append: "++=",

        // range
        range_inclusive: "..",
        range_inclusive2: "..=",
        range_exclusive: "..<",
    }
}

/// operator precedence 
/// taken from `nu_protocol::`
function PREC() {
    return {
        range: 15,
        power: 14,
        multiplicative: 13,
        additive: 12,
        bit_shift: 11,
        comparative: 10,
        membership: 9,
        regex: 8,
        bit_and: 7,
        bit_xor: 6,
        bit_or: 5,
        and: 4,
        xor: 3,
        or: 2,
        assignment: 1,
    }
}

/// map of operators and their precedence
function TABLE() {
    const multiplicatives = choice(
        OPR().times,
        OPR().divide,
        OPR().modulo,
        OPR().floor,
    );

    const comparatives = choice(
        OPR().equal,
        OPR().not_equal,
        OPR().less_than,
        OPR().less_than_equal,
        OPR().greater_than,
        OPR().greater_than_equal,
    );

    const memberships = choice(
        OPR().in,
        OPR().not_in,
        OPR().starts_with,
        OPR().ends_with,
    );

    // `range` is not included here and is handled separately
    return [
        [PREC().power, OPR().power],
        [PREC().multiplicative, multiplicatives],
        [PREC().additive, choice(OPR().plus, OPR().minus)],
        [PREC().bit_shift, choice(OPR().bit_shl, OPR().bit_shr)],
        [PREC().comparative, comparatives],
        [PREC().membership, memberships],
        [PREC().regex, choice(OPR().regex_match, OPR().regex_not_match)],
        [PREC().bit_and, OPR().bit_and],
        [PREC().bit_xor, OPR().bit_xor],
        [PREC().bit_or, OPR().bit_or],
        [PREC().and, OPR().and],
        [PREC().xor, OPR().xor],
        [PREC().or, OPR().or],
    ]
}

/// special tokens
function SPECIAL() {
    return {
        true: "true",
        false: "false",
        null: "null",

        pos_infinity: "inf",
        neg_infinity: "-inf",
        not_a_number: "NaN",
    }
}

/// nushell flat types 
/// taken from `nu_parser::parser::parse_shape_name()`
// i.e not composite types like list<int> or record<name: string>
function FLAT_TYPES() {
    const types = [
        "any", "binary", "block", "bool", "cell-path", "closure", "cond",
        "datetime", "directory", "duration", "directory", "duration",
        "error", "expr", "float", "decimal", "filesize", "full-cell-path",
        "glob", "int", "import-pattern", "keyword", "math", "nothing",
        "number", "one-of", "operator", "path", "range", "record", "signature",
        "string", "table", "variable", "var-with-opt-type"
    ];

    return field("flat_type", choice(...types))
}

/// duration units, are case sensitive
/// taken from `nu_parser::parse_duration_bytes()`
function DURATION_UNIT() {
    return choice(...["ns", "µs", "us", "ms", "sec", "min", "hr", "day", "wk"])
};

/// filesize units, are case insensitive
/// taken from `nu_parser::parse_filesize_bytes()`
function FILESIZE_UNIT() {
    return choice(...[
        "b", "B",

        "kb", "kB", "Kb", "KB",
        "mb", "mB", "Mb", "MB",
        "gb", "gB", "Gb", "GB",
        "tb", "tB", "Tb", "TB",
        "pb", "pB", "Pb", "PB",
        "eb", "eB", "Eb", "EB",
        "zb", "zB", "Zb", "ZB",

        "kib", "kiB", "kIB", "kIb", "Kib", "KIb", "KIB",
        "mib", "miB", "mIB", "mIb", "Mib", "MIb", "MIB",
        "gib", "giB", "gIB", "gIb", "Gib", "GIb", "GIB",
        "tib", "tiB", "tIB", "tIb", "Tib", "TIb", "TIB",
        "pib", "piB", "pIB", "pIb", "Pib", "PIb", "PIB",
        "eib", "eiB", "eIB", "eIb", "Eib", "EIb", "EIB",
        "zib", "ziB", "zIB", "zIb", "Zib", "ZIb", "ZIB",
    ])
}

/// from `nu-parser::parser::is_identifier_byte()`
function NON_IDENT_CHARS() {
    return [
        '"', "'", '`', '&',
        '.', '\\[', '\\]',
        '(', ')', '{', '}',
        '*', '^', '/', '=',
        '|', '!', '<', '>',
    ]
}


// stolen from tree-sitter-bash
function noneOf(...chars) {
    const negatedString = chars.map(c => c === '\\' ? '\\\\' : c).join('');
    return new RegExp('[^' + negatedString + ']');
}
